fix(statusbar): remove 2px left padding from first visible left item
Made-with: Cursor

--- a/src/vs/workbench/browser/parts/statusbar/media/statusbarpart.css
+++ b/src/vs/workbench/browser/parts/statusbar/media/statusbarpart.css
@@ -86,7 +86,7 @@
 
 .monaco-workbench .part.statusbar > .items-container > .statusbar-item.left.first-visible-item {
 	padding-right: 0;
-	padding-left: 2px;
+	padding-left: 0;
 }
 
 .monaco-workbench .part.statusbar > .items-container > .statusbar-item.right.last-visible-item {
